@@ -60,7 +60,7 @@ of \mhack{} strings.
 
 \begin{document}
 \maketitle
-{\hspace*{\fill}{\small\verb$Id: manual.tex,v 1.43 2012/01/11 16:47:09 strauman Exp $}\hspace*{\fill}}
+{\hspace*{\fill}{\small\verb$Id: manual.tex,v 1.44 2015/06/04 19:37:02 strauman Exp $}\hspace*{\fill}}
 \section{Introduction}
 The \sca{} package provides an interface to the
 EPICS channel access client library which can be
@@ -827,10 +827,10 @@ of strings holding the PV EGUs.
 
 \vspace*{\fill}
 \pbrk
-\subsection{lcaGetEnumStates}
+\subsection{lcaGetEnumStrings}
 \subsubsection{Calling Sequence}
 \begin{verbatim}
-enum_states = lcaGetEnumStates(pvs)
+enum_states = lcaGetEnumStrings(pvs)
 \end{verbatim}
 \subsubsection{Description}
 Retrieve the symbolic values of all \ita{ENUM} states of a number of PVs.
