@@ -32,7 +32,7 @@ MEXF += lcaGetWarnLimits
 MEXF += lcaGetAlarmLimits
 MEXF += lcaGetPrecision
 MEXF += lcaGetUnits
-MEXF += lcaGetEnumStates
+MEXF += lcaGetEnumStrings
 MEXF += lcaPut
 MEXF += lcaPutNoWait
 MEXF += lcaGetRetryCount
